# PythonMusic

./: .gitignore  LICENSE  LICENSE-PSF  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
PEM/: PEM.py  TODO.md  build.py  packages.py  readme.txt
PEM/hook/: hook-pem.py
PEM/hook/rthooks/: pem_rth_mplconfig.py
docs/: CNAME  download.md  faq.md  index.md  requirements.txt
docs/_scripts/: build_outline.py  extract_api.py  navtools.py  rebuild_layout.sh  restore_handwritten.py  style_api.py  update_definitions.sh  zip_examples.py
docs/api/: index.md
docs/api/advanced/: index.md
docs/api/gui/: index.md
docs/api/midi/: constants.md  index.md
docs/api/music/: frequencyToPitch.md  index.md  microtonality.md  pitch.md  pitchToFrequency.md
docs/api/osc/: index.md
docs/api/timer/: index.md
docs/api/utilities/: frange.md  index.md  map.md  mapList.md  mapScale.md  mapScaleList.md  mapValue.md  mapValueList.md  xfrange.md
docs/articles/: cs-principles.md  steve-reichs-piano-phase.md
docs/examples/: ch1.md  ch10.md  ch11.md  ch2.md  ch3.md  ch4.md  ch5.md  ch6.md  ch7.md  ch8.md  ch9.md  index.md
docs/examples/_snippets/: ArvoPart.CantusInMemoriam.py  ConcretPH_Xenakis.py  DeepPurple.SmokeOnTheWater.py  JS_Bach.Canon.TriasHarmonica.BWV1072.py  JS_Bach.Canon_1.GoldbergGround.BWV1087.py  PierreCage.StructuresPourDeuxChances.py  RGB_Display.py  boids.py  (+76 more)
docs/stylesheets/: extra.css
overrides/: main.html
overrides/partials/: footer.html  header.html  leftnav.html  megamenu.html  nav-item.html
src/: gui.py  iannix.py  image.py  markov.py  midi.py  music.py  osc.py  timer.py  utilities.py  zipf.py
src/PythonMusic/: GuiHandler.py  GuiRenderer.py  RealtimeAudioPlayer.py  __init__.py  notationRenderer.py
src/pem/: __init__.py  __main__.py  _encoding.py  macosx.py  mainmenu.py  perflog.py  pyshell.py  util.py  window.py
(+1876 files in other folders)
